# sieve-audit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: bundle_format.md  claim_calibration.md  comprehensive_gpu_run.md  index.html  inspect_integration.md  methodology.md  necessity_runner.md  related_work.md  roadmap.md  standard-validity-audit.md  verbalizer_faithfulness.md
examples/apollo_deception/: README.md
examples/comprehensive_refusal/: README.md  bundle_all.json  pod_run.sh  prepare_prompts.py
examples/comprehensive_refusal/reports/: comprehensive.html  comprehensive.json  comprehensive.md
examples/qwen3_eval_deploy/: README.md  pod_run.sh  prepare_prompts.py
examples/refusal_necessity/: README.md  ablation_bundle.json  audit_card.json  audit_card.md
examples/refusal_positive_control/: SPEC.md  calibrate.py  check_necessity_gate.py  make_data.py  refusal_remote.sh  test_refusal_scorers.py
examples/refusal_positive_control/reports/: calib_report.json  decode.json  refusal_qwen7b.html  refusal_qwen7b.json  refusal_qwen7b.md
examples/unlearning_completeness/: BENIGN_GRAM_VALIDATION.md  PHASE2_GRAM.md  PREREGISTRATION.md  README.md  RESULTS_PHASE1.md  SPEC.md  make_prereg.py  pod_run.sh  prepare_data.py  prereg.wmdp-bio.json  provision_runpod.sh  reelicit.py  run_triptych.py  unlearning_audit.py
examples/unlearning_completeness/data/: manifest.wmdp-bio.json
examples/vlaf_alignment_faking/: PREREGISTRATION.md  pod_run.sh  pod_run_prod.sh  pod_run_resume.sh  prepare_prompts.py
examples/vlaf_alignment_faking/crossphrasing/: RESULTS.md  build_and_run_B.py  build_faithful_B.py  extract_acts.py  faithful_remote.sh  make_variants.py  remote_run_B.sh  transfer_matrix.py
examples/vlaf_alignment_faking/reports/: REPORT.md  bundle_all.json  bundle_prod.json  vlaf_leakage_onepager.md  vlaf_olmo2_7b.html  vlaf_olmo2_7b.json  (+1 more)
reports/: README.md  apollo_audit_summary.md  apollo_pairs_probe.json  apollo_pairs_probe.md  apollo_rp_probe.json  apollo_rp_probe.md
reports/qwen3_l55_run1/: NOTES.md  qwen3_l55.json  qwen3_l55.md
reports/selftest/: selftest_causally_sufficient.json  selftest_causally_sufficient.md  selftest_insufficient_protocol.json  selftest_insufficient_protocol.md  selftest_intervention_ineffective.json  selftest_intervention_ineffective.md  selftest_not_causally_sufficient.json  selftest_not_causally_sufficient.md  selftest_not_decodable.json  selftest_not_decodable.md  selftest_surface_confounded.json  selftest_surface_confounded.md
src/sieve_audit/: __init__.py  baselines.py  bundle.py  calibration.py  card.py  cli.py  config.py  controls.py  decodability.py  deployment.py  efficacy.py  engine.py  inspect_task.py  leakage.py  multilayer.py  necessity.py  oracle.py  prereg.py  report.py  stats.py  synth.py  verdict.py
tests/: test_antigaming.py  test_calibration.py  test_deployment.py  test_gates.py  test_inspect.py  test_leakage.py  test_multilayer.py  test_multirandom.py  test_necessity.py  test_oracle.py  test_prereg.py  test_profile.py  test_selftest.py  test_verbalizer.py  test_verdict.py
(+45 files in other folders)
