[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sieve-audit"
version = "0.1.0"
description = "SIEVE — Safety Indicator Evidence Validation Engine: validity checks for AI safety signals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ratnaditya Jonnalagadda", email = "ratnaditya@gmail.com" }]
keywords = ["ai-safety", "interpretability", "evaluation", "activation-steering", "probes", "eval-awareness"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
inspect = ["inspect-ai>=0.3.50"]
runner = ["torch>=2.1", "transformers>=4.40", "accelerate>=0.30", "pyyaml>=6"]
judges = ["anthropic>=0.40", "openai>=1.40"]
# dev includes inspect so the full test suite (incl. tests/test_inspect.py) runs
dev = ["pytest>=7", "inspect-ai>=0.3.50"]

[project.scripts]
sieve = "sieve_audit.cli:main"

[project.urls]
Homepage = "https://github.com/Ratnaditya-J/sieve-audit"
Documentation = "https://github.com/Ratnaditya-J/sieve-audit/blob/main/DESIGN.md"
Issues = "https://github.com/Ratnaditya-J/sieve-audit/issues"
Paper = "https://github.com/Ratnaditya-J/alignment-evals/blob/main/docs/probing-is-not-enough.pdf"

[tool.hatch.build.targets.wheel]
packages = ["src/sieve_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
